--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build && node ./dist/index.js",
-    "dev": "npm run build && nodemon ./dist/index.js",
-    "build": "tsc",
+    "dev": "npm run build && npm run db:seed && nodemon ./dist/index.js",
+    "build": "npm run db:start && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seeds": "ts-node ./src/prisma/seeds",
-    "generate": "prisma generate --schema=./src/prisma/schema.prisma"
+    "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --name init --schema ./src/prisma/schema.prisma",
+    "db:start": "npm run prisma:migrate && npm run prisma:generate",
+    "db:seed": "ts-node ./src/prisma/seeds"
   },
   "keywords": [],
   "author": "",
