--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run db:start && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev --name init --schema ./src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate deploy --schema ./src/prisma/schema.prisma",
     "db:start": "npm run prisma:migrate && npm run prisma:generate",
     "db:seed": "ts-node ./src/prisma/seeds"
   },
