--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "softeo-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "npm run build && node ./dist/index.js",
     "dev": "npm run build && npm run db:seed && nodemon ./dist/index.js",
     "build": "npm run db:start && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate deploy --schema ./src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --name init --schema ./src/prisma/schema.prisma && prisma migrate deploy --schema ./src/prisma/schema.prisma",
     "db:start": "npm run prisma:migrate && npm run prisma:generate",
     "db:seed": "ts-node ./src/prisma/seeds"
   },
@@ -17,7 +17,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
     "nodemon": "^2.0.19",
@@ -27,7 +26,6 @@
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1"
