--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node ./dist/index.js",
-    "dev": "npm run build && npm run db:seed && nodemon ./dist/index.js",
     "build": "npm run db:start && tsc",
+    "start": "npm run build && node ./dist/index.js",
+    "dev": "npm run db:start && tsc && npm run db:seed && nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy --schema ./src/prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema ./src/prisma/schema.prisma",
-    "db:start": "npm run prisma:migrate:dev && npm run prisma:generate",
+    "db:start": "npm run prisma:migrate && npm run prisma:generate",
+    "db:start:dev": "npm run prisma:migrate:dev && npm run prisma:generate",
     "db:seed": "ts-node ./src/prisma/seeds"
   },
   "keywords": [],
