--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.17.2"
+  },
   "scripts": {
     "build": "npm run db:start && tsc",
-    "start": "npm run build && node ./dist/index.js",
+    "start": "tsc && node ./dist/index.js",
     "dev": "npm run db:start && tsc && npm run db:seed && nodemon ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
