--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "npm run db:start && tsc",
+    "build": "npm run db:start && npm run postinstall",
     "start": "npm run build && node ./dist/index.js",
-    "dev": "npm run db:start && tsc && npm run db:seed && nodemon ./dist/index.js",
+    "dev": "npm run db:start && npm run postinstall && npm run db:seed && nodemon ./dist/index.js",
+    "tsc": "tsc",
+    "postinstall": "npm run tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy --schema ./src/prisma/schema.prisma",
