--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run db:start && npm run postinstall",
     "start": "npm run build && node ./dist/index.js",
     "dev": "npm run db:start && npm run postinstall && npm run db:seed && nodemon ./dist/index.js",
-    "tsc": "tsc",
+    "tsc": "./node_modules/typescript/bin/tsc",
     "postinstall": "npm run tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
