--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "npm run db:start && npm run postinstall",
+    "build": "npm run db:start",
     "start": "npm run build && node ./dist/index.js",
-    "dev": "npm run db:start && npm run postinstall && npm run db:seed && nodemon ./dist/index.js",
-    "tsc": "./node_modules/typescript/bin/tsc",
-    "postinstall": "npm run tsc",
+    "dev": "npm run db:start && tsc && npm run db:seed && nodemon ./dist/index.js",
+    "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy --schema ./src/prisma/schema.prisma",
