--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run db:start",
     "start": "npm run build && node ./dist/index.js",
-    "dev": "npm run db:start && tsc && npm run db:seed && nodemon ./dist/index.js",
+    "dev": "npm run db:start && tsc && npm run db:seed && tsnd --exit-child index.ts",
     "postinstall": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
@@ -23,9 +23,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.13",
-    "nodemon": "^2.0.19",
     "prisma": "^4.2.1",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
