test: add testes - buscar todos os clientes

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "npm run db:start",
-    "start": "npm run build && node ./dist/index.js",
-    "dev": "npm run db:start && tsc && npm run db:seed && tsnd --exit-child --debug index.ts",
-    "postinstall": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && npm run db:start",
+    "start": "npm run db:start && node ./dist/index.js",
+    "dev": "npm run db:start:dev && tsc && npm run db:seed && tsnd --exit-child --debug index.ts",
+    "test": "mocha -r ts-node/register ./src/tests/*$NAME*.{test,spec}.ts -t 10000 --exit",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate deploy --schema ./src/prisma/schema.prisma",
     "prisma:migrate:dev": "prisma migrate dev --name init --schema ./src/prisma/schema.prisma",
@@ -20,10 +19,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.13",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.0.0",
     "prisma": "^4.2.1",
+    "superagent": "^8.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
